// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenAPI 3.1 generator contract-with-array-query-param.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/companies": {
      "get": {
        "operationId": "EndpointWithArrayQueryParam",
        "parameters": [
          {
            "name": "countries",
            "in": "query",
            "style": "form",
            "explode": true,
            "required": true,
            "schema": {
              "type": "array",
              "items": {
                "type": "string"
              }
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-array-query-param-and-comma-serialization-strategy.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/companies": {
      "get": {
        "operationId": "EndpointWithArrayQueryParam",
        "parameters": [
          {
            "name": "countries",
            "in": "query",
            "style": "form",
            "explode": false,
            "required": true,
            "schema": {
              "type": "array",
              "items": {
                "type": "string"
              }
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-delete-endpoint.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users/{id}": {
      "delete": {
        "operationId": "DeleteEndpoint",
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "204": {
            "description": "204 response"
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-endpoint-metadata.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "description": "My description",
        "summary": "My summary",
        "operationId": "GetEndpoint",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "id",
                    "name"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-examples.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "EndpointWithExampleOnHeaders",
        "parameters": [
          {
            "name": "Accept-Language",
            "in": "header",
            "description": "property-example description",
            "required": true,
            "schema": {
              "type": "string"
            },
            "examples": {
              "property-example": {
                "value": "property-example-value"
              }
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-get-endpoint.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "GetEndpoint",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-head-endpoint.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "head": {
        "operationId": "HeadEndpoint",
        "responses": {
          "204": {
            "description": "204 response",
            "headers": {
              "Location": {
                "required": true,
                "schema": {
                  "type": "string"
                }
              },
              "Link": {
                "required": false,
                "schema": {
                  "type": "string"
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-intersection-types.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "IntersectionType",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "allOf": [
                    {
                      "type": "object",
                      "properties": {
                        "id": {
                          "type": "string"
                        }
                      },
                      "required": [
                        "id"
                      ]
                    },
                    {
                      "type": "object",
                      "properties": {
                        "name": {
                          "type": "string"
                        }
                      },
                      "required": [
                        "name"
                      ]
                    }
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-multiple-servers.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {},
  "servers": [
    {
      "url": "https://{username}.gigantic-server.com:{port}/{basePath}",
      "variables": {
        "username": {
          "default": "demo"
        },
        "port": {
          "default": "8443",
          "enum": [
            "8443",
            "443"
          ]
        },
        "basePath": {
          "default": "v2"
        }
      }
    },
    {
      "url": "https://{username}.gigantic-server.com:{port}/{basePath}",
      "variables": {
        "username": {
          "default": "dev"
        },
        "port": {
          "default": "8080",
          "enum": [
            "8080",
            "8081"
          ]
        },
        "basePath": {
          "default": "v2"
        }
      }
    }
  ]
}"
`;

exports[`OpenAPI 3.1 generator contract-with-object-query-param.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/companies": {
      "get": {
        "operationId": "EndpointWithArrayQueryParam",
        "parameters": [
          {
            "name": "pagination",
            "in": "query",
            "style": "deepObject",
            "explode": true,
            "required": true,
            "schema": {
              "type": "object",
              "properties": {
                "page": {
                  "type": "integer",
                  "format": "int32"
                },
                "order": {
                  "type": "string",
                  "enum": [
                    "desc",
                    "asc"
                  ]
                }
              },
              "required": [
                "page",
                "order"
              ]
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-one-server.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {},
  "servers": [
    {
      "url": "https://{username}.gigantic-server.com:{port}/{basePath}",
      "description": "Production server",
      "variables": {
        "username": {
          "default": "demo"
        },
        "port": {
          "default": "8443",
          "enum": [
            "8443",
            "443"
          ]
        },
        "basePath": {
          "default": "v2"
        }
      }
    }
  ]
}"
`;

exports[`OpenAPI 3.1 generator contract-with-patch-endpoint.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users/{id}": {
      "patch": {
        "operationId": "PatchEndpoint",
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "type": "object",
                "properties": {
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ]
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "id",
                    "name"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-path-params.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/companies/{companyId}/users/{userId}": {
      "get": {
        "operationId": "EndpointWithPathParams",
        "parameters": [
          {
            "name": "companyId",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "name": "userId",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "id",
                    "name"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-post-endpoint.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "post": {
        "operationId": "PostEndpoint",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "type": "object",
                "properties": {
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ]
              }
            }
          },
          "required": true
        },
        "responses": {
          "201": {
            "description": "201 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "id",
                    "name"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-put-endpoint.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users/{id}": {
      "put": {
        "operationId": "PutEndpoint",
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "type": "object",
                "properties": {
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ]
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "id",
                    "name"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-query-params.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/companies": {
      "get": {
        "operationId": "EndpointWithQueryParams",
        "parameters": [
          {
            "name": "country",
            "in": "query",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "name": "post.code",
            "in": "query",
            "required": false,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-request-headers.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "EndpointWithRequestHeaders",
        "parameters": [
          {
            "name": "Accept-Encoding",
            "in": "header",
            "required": false,
            "schema": {
              "type": "string"
            }
          },
          {
            "name": "Accept-Language",
            "in": "header",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-response-headers.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "post": {
        "operationId": "EndpointWithResponseHeaders",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "type": "object",
                "properties": {
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ]
              }
            }
          },
          "required": true
        },
        "responses": {
          "201": {
            "description": "201 response",
            "headers": {
              "Location": {
                "required": true,
                "schema": {
                  "type": "string"
                }
              },
              "Link": {
                "required": false,
                "schema": {
                  "type": "string"
                }
              }
            },
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "id",
                    "name"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator contract-with-security-header.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "GetEndpoint",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "array",
                  "items": {
                    "type": "object",
                    "properties": {
                      "id": {
                        "type": "string"
                      },
                      "name": {
                        "type": "string"
                      }
                    },
                    "required": [
                      "id",
                      "name"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "securitySchemes": {
      "SecurityHeader": {
        "type": "apiKey",
        "in": "header",
        "name": "security-header"
      }
    }
  },
  "security": [
    {
      "SecurityHeader": []
    }
  ]
}"
`;

exports[`OpenAPI 3.1 generator contract-with-specific-and-default-responses.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users/{id}": {
      "get": {
        "operationId": "EndpointWithResponses",
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "id",
                    "name"
                  ]
                }
              }
            }
          },
          "404": {
            "description": "404 response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "message": {
                      "type": "string"
                    },
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "message",
                    "status"
                  ]
                }
              }
            }
          },
          "default": {
            "description": "default response",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "message": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "message"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator minimal-contract.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {}
}"
`;

exports[`OpenAPI 3.1 generator openapi3-1/contract-with-nested-discriminated-unions.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/filters": {
      "get": {
        "operationId": "NestedDiscriminatedUnions",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Body"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "Toggle": {
        "type": "object",
        "properties": {
          "kind": {
            "type": "string",
            "enum": [
              "toggle"
            ]
          },
          "on": {
            "type": "boolean"
          }
        },
        "required": [
          "kind",
          "on"
        ]
      },
      "SingleSlider": {
        "type": "object",
        "properties": {
          "kind": {
            "type": "string",
            "enum": [
              "single_slider"
            ]
          },
          "value": {
            "type": "integer",
            "format": "int32"
          }
        },
        "required": [
          "kind",
          "value"
        ]
      },
      "RangeSlider": {
        "type": "object",
        "properties": {
          "kind": {
            "type": "string",
            "enum": [
              "range_slider"
            ]
          },
          "min": {
            "type": "integer",
            "format": "int32"
          },
          "max": {
            "type": "integer",
            "format": "int32"
          }
        },
        "required": [
          "kind",
          "min",
          "max"
        ]
      },
      "Slider": {
        "oneOf": [
          {
            "$ref": "#/components/schemas/SingleSlider"
          },
          {
            "$ref": "#/components/schemas/RangeSlider"
          }
        ],
        "discriminator": {
          "propertyName": "kind",
          "mapping": {
            "single_slider": "#/components/schemas/SingleSlider",
            "range_slider": "#/components/schemas/RangeSlider"
          }
        }
      },
      "Filter": {
        "oneOf": [
          {
            "$ref": "#/components/schemas/Toggle"
          },
          {
            "$ref": "#/components/schemas/SingleSlider"
          },
          {
            "$ref": "#/components/schemas/RangeSlider"
          }
        ],
        "discriminator": {
          "propertyName": "kind",
          "mapping": {
            "toggle": "#/components/schemas/Toggle",
            "single_slider": "#/components/schemas/SingleSlider",
            "range_slider": "#/components/schemas/RangeSlider"
          }
        }
      },
      "Picker": {
        "type": "object",
        "properties": {
          "kind": {
            "type": "string",
            "enum": [
              "picker"
            ]
          },
          "options": {
            "type": "array",
            "items": {
              "type": "string"
            }
          }
        },
        "required": [
          "kind",
          "options"
        ]
      },
      "Control": {
        "oneOf": [
          {
            "$ref": "#/components/schemas/SingleSlider"
          },
          {
            "$ref": "#/components/schemas/RangeSlider"
          },
          {
            "$ref": "#/components/schemas/Picker"
          }
        ],
        "discriminator": {
          "propertyName": "kind",
          "mapping": {
            "single_slider": "#/components/schemas/SingleSlider",
            "range_slider": "#/components/schemas/RangeSlider",
            "picker": "#/components/schemas/Picker"
          }
        }
      },
      "SliderAlias": {
        "$ref": "#/components/schemas/Slider"
      },
      "MaybeSlider": {
        "anyOf": [
          {
            "oneOf": [
              {
                "$ref": "#/components/schemas/SingleSlider"
              },
              {
                "$ref": "#/components/schemas/RangeSlider"
              }
            ],
            "discriminator": {
              "propertyName": "kind",
              "mapping": {
                "single_slider": "#/components/schemas/SingleSlider",
                "range_slider": "#/components/schemas/RangeSlider"
              }
            }
          },
          {
            "type": "null"
          }
        ]
      },
      "Tag": {
        "type": "object",
        "properties": {
          "kind": {
            "type": "string",
            "enum": [
              "tag"
            ]
          }
        },
        "required": [
          "kind"
        ]
      },
      "Labelled": {
        "type": "object",
        "properties": {
          "label": {
            "type": "string"
          }
        },
        "required": [
          "label"
        ]
      },
      "LabelledTag": {
        "allOf": [
          {
            "$ref": "#/components/schemas/Tag"
          },
          {
            "$ref": "#/components/schemas/Labelled"
          }
        ]
      },
      "Left": {
        "oneOf": [
          {
            "$ref": "#/components/schemas/Toggle"
          },
          {
            "$ref": "#/components/schemas/Picker"
          }
        ],
        "discriminator": {
          "propertyName": "kind",
          "mapping": {
            "toggle": "#/components/schemas/Toggle",
            "picker": "#/components/schemas/Picker"
          }
        }
      },
      "Right": {
        "oneOf": [
          {
            "$ref": "#/components/schemas/Toggle"
          },
          {
            "$ref": "#/components/schemas/Tag"
          }
        ],
        "discriminator": {
          "propertyName": "kind",
          "mapping": {
            "toggle": "#/components/schemas/Toggle",
            "tag": "#/components/schemas/Tag"
          }
        }
      },
      "Body": {
        "type": "object",
        "properties": {
          "filter": {
            "$ref": "#/components/schemas/Filter"
          },
          "nullableFilter": {
            "anyOf": [
              {
                "oneOf": [
                  {
                    "$ref": "#/components/schemas/Toggle"
                  },
                  {
                    "$ref": "#/components/schemas/SingleSlider"
                  },
                  {
                    "$ref": "#/components/schemas/RangeSlider"
                  }
                ],
                "discriminator": {
                  "propertyName": "kind",
                  "mapping": {
                    "toggle": "#/components/schemas/Toggle",
                    "single_slider": "#/components/schemas/SingleSlider",
                    "range_slider": "#/components/schemas/RangeSlider"
                  }
                }
              },
              {
                "type": "null"
              }
            ]
          },
          "threeLevels": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Toggle"
              },
              {
                "$ref": "#/components/schemas/SingleSlider"
              },
              {
                "$ref": "#/components/schemas/RangeSlider"
              },
              {
                "$ref": "#/components/schemas/Picker"
              }
            ],
            "discriminator": {
              "propertyName": "kind",
              "mapping": {
                "toggle": "#/components/schemas/Toggle",
                "single_slider": "#/components/schemas/SingleSlider",
                "range_slider": "#/components/schemas/RangeSlider",
                "picker": "#/components/schemas/Picker"
              }
            }
          },
          "alias": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Toggle"
              },
              {
                "$ref": "#/components/schemas/SingleSlider"
              },
              {
                "$ref": "#/components/schemas/RangeSlider"
              }
            ],
            "discriminator": {
              "propertyName": "kind",
              "mapping": {
                "toggle": "#/components/schemas/Toggle",
                "single_slider": "#/components/schemas/SingleSlider",
                "range_slider": "#/components/schemas/RangeSlider"
              }
            }
          },
          "liftedNull": {
            "anyOf": [
              {
                "oneOf": [
                  {
                    "$ref": "#/components/schemas/Toggle"
                  },
                  {
                    "$ref": "#/components/schemas/SingleSlider"
                  },
                  {
                    "$ref": "#/components/schemas/RangeSlider"
                  }
                ],
                "discriminator": {
                  "propertyName": "kind",
                  "mapping": {
                    "toggle": "#/components/schemas/Toggle",
                    "single_slider": "#/components/schemas/SingleSlider",
                    "range_slider": "#/components/schemas/RangeSlider"
                  }
                }
              },
              {
                "type": "null"
              }
            ]
          },
          "intersectionLeaf": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/LabelledTag"
              },
              {
                "$ref": "#/components/schemas/SingleSlider"
              },
              {
                "$ref": "#/components/schemas/RangeSlider"
              }
            ],
            "discriminator": {
              "propertyName": "kind",
              "mapping": {
                "tag": "#/components/schemas/LabelledTag",
                "single_slider": "#/components/schemas/SingleSlider",
                "range_slider": "#/components/schemas/RangeSlider"
              }
            }
          },
          "inlineMemberWithUnion": {
            "oneOf": [
              {
                "type": "object",
                "properties": {
                  "kind": {
                    "type": "string",
                    "enum": [
                      "inline"
                    ]
                  }
                },
                "required": [
                  "kind"
                ]
              },
              {
                "$ref": "#/components/schemas/SingleSlider"
              },
              {
                "$ref": "#/components/schemas/RangeSlider"
              }
            ],
            "discriminator": {
              "propertyName": "kind"
            }
          },
          "inlineMemberWithNullableUnion": {
            "anyOf": [
              {
                "oneOf": [
                  {
                    "type": "object",
                    "properties": {
                      "kind": {
                        "type": "string",
                        "enum": [
                          "inline"
                        ]
                      }
                    },
                    "required": [
                      "kind"
                    ]
                  },
                  {
                    "$ref": "#/components/schemas/SingleSlider"
                  },
                  {
                    "$ref": "#/components/schemas/RangeSlider"
                  }
                ],
                "discriminator": {
                  "propertyName": "kind"
                }
              },
              {
                "type": "null"
              }
            ]
          },
          "diamond": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Left"
              },
              {
                "$ref": "#/components/schemas/Right"
              }
            ]
          }
        },
        "required": [
          "filter",
          "nullableFilter",
          "threeLevels",
          "alias",
          "liftedNull",
          "intersectionLeaf",
          "inlineMemberWithUnion",
          "inlineMemberWithNullableUnion",
          "diamond"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator openapi3-1/contract-with-null-type.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "NullType",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Body"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "Nothing": {
        "type": "null"
      },
      "Body": {
        "type": "object",
        "properties": {
          "name": {
            "type": "string"
          },
          "nothing": {
            "type": "null"
          },
          "aliasedNothing": {
            "$ref": "#/components/schemas/Nothing"
          }
        },
        "required": [
          "name",
          "nothing",
          "aliasedNothing"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator openapi3-1/contract-with-nullable-intersections.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "NullableIntersections",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Body"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "Named": {
        "type": "object",
        "properties": {
          "name": {
            "type": "string"
          }
        },
        "required": [
          "name"
        ]
      },
      "Aged": {
        "type": "object",
        "properties": {
          "age": {
            "type": "string"
          }
        },
        "required": [
          "age"
        ]
      },
      "NamedAndAged": {
        "allOf": [
          {
            "$ref": "#/components/schemas/Named"
          },
          {
            "$ref": "#/components/schemas/Aged"
          }
        ]
      },
      "Body": {
        "type": "object",
        "properties": {
          "inline": {
            "anyOf": [
              {
                "allOf": [
                  {
                    "$ref": "#/components/schemas/Named"
                  },
                  {
                    "$ref": "#/components/schemas/Aged"
                  }
                ]
              },
              {
                "type": "null"
              }
            ]
          },
          "reference": {
            "anyOf": [
              {
                "$ref": "#/components/schemas/NamedAndAged"
              },
              {
                "type": "null"
              }
            ]
          },
          "required": {
            "allOf": [
              {
                "$ref": "#/components/schemas/Named"
              },
              {
                "$ref": "#/components/schemas/Aged"
              }
            ]
          }
        },
        "required": [
          "inline",
          "reference",
          "required"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator openapi3-1/contract-with-nullable-references.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "NullableReferences",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Body"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "User": {
        "type": "object",
        "properties": {
          "name": {
            "type": "string"
          }
        },
        "required": [
          "name"
        ]
      },
      "UserAlias": {
        "$ref": "#/components/schemas/User"
      },
      "MaybeUser": {
        "anyOf": [
          {
            "$ref": "#/components/schemas/User"
          },
          {
            "type": "null"
          }
        ]
      },
      "MaybeUserAlias": {
        "$ref": "#/components/schemas/MaybeUser"
      },
      "Body": {
        "type": "object",
        "properties": {
          "user": {
            "anyOf": [
              {
                "$ref": "#/components/schemas/User"
              },
              {
                "type": "null"
              }
            ],
            "description": "the user, if any"
          },
          "alias": {
            "anyOf": [
              {
                "$ref": "#/components/schemas/UserAlias"
              },
              {
                "type": "null"
              }
            ]
          },
          "maybeUser": {
            "$ref": "#/components/schemas/MaybeUser"
          },
          "maybeUserAlias": {
            "$ref": "#/components/schemas/MaybeUserAlias"
          },
          "optionalUser": {
            "anyOf": [
              {
                "$ref": "#/components/schemas/User"
              },
              {
                "type": "null"
              }
            ]
          }
        },
        "required": [
          "user",
          "alias",
          "maybeUser",
          "maybeUserAlias"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator openapi3-1/contract-with-nullable-types.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "NullableTypes",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Body"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "Body": {
        "type": "object",
        "properties": {
          "boolean": {
            "type": [
              "boolean",
              "null"
            ]
          },
          "string": {
            "type": [
              "string",
              "null"
            ]
          },
          "date": {
            "type": [
              "string",
              "null"
            ],
            "format": "date"
          },
          "dateTime": {
            "type": [
              "string",
              "null"
            ],
            "format": "date-time"
          },
          "float": {
            "type": [
              "number",
              "null"
            ],
            "format": "float"
          },
          "double": {
            "type": [
              "number",
              "null"
            ],
            "format": "double"
          },
          "int32": {
            "type": [
              "integer",
              "null"
            ],
            "format": "int32"
          },
          "int64": {
            "type": [
              "integer",
              "null"
            ],
            "format": "int64"
          },
          "stringLiteral": {
            "type": [
              "string",
              "null"
            ],
            "enum": [
              "one",
              null
            ]
          },
          "intLiteral": {
            "type": [
              "integer",
              "null"
            ],
            "enum": [
              1,
              null
            ],
            "format": "int32"
          },
          "booleanLiteral": {
            "type": [
              "boolean",
              "null"
            ],
            "enum": [
              true,
              null
            ]
          },
          "stringLiterals": {
            "type": [
              "string",
              "null"
            ],
            "enum": [
              "one",
              "two",
              null
            ]
          },
          "intLiterals": {
            "type": [
              "integer",
              "null"
            ],
            "enum": [
              1,
              2,
              null
            ],
            "format": "int32"
          },
          "object": {
            "type": [
              "object",
              "null"
            ],
            "properties": {
              "name": {
                "type": "string"
              }
            },
            "required": [
              "name"
            ]
          },
          "array": {
            "type": [
              "array",
              "null"
            ],
            "items": {
              "type": "string"
            }
          },
          "arrayOfNullable": {
            "type": "array",
            "items": {
              "type": [
                "string",
                "null"
              ]
            }
          }
        },
        "required": [
          "boolean",
          "string",
          "date",
          "dateTime",
          "float",
          "double",
          "int32",
          "int64",
          "stringLiteral",
          "intLiteral",
          "booleanLiteral",
          "stringLiterals",
          "intLiterals",
          "object",
          "array",
          "arrayOfNullable"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator openapi3-1/contract-with-schemaprop-conversions.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/prices": {
      "get": {
        "operationId": "SchemaPropConversions",
        "parameters": [
          {
            "name": "limit",
            "in": "query",
            "description": "An upper bound made exclusive, with the flag written first",
            "required": false,
            "schema": {
              "type": "integer",
              "format": "int32",
              "exclusiveMaximum": 100,
              "examples": [
                10
              ]
            }
          },
          {
            "name": "size",
            "in": "header",
            "description": "A lower bound made exclusive",
            "required": true,
            "schema": {
              "type": "integer",
              "format": "int32",
              "exclusiveMinimum": 1,
              "default": 42
            }
          }
        ],
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Body"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "Price": {
        "type": "object",
        "properties": {
          "amount": {
            "type": "number",
            "format": "double"
          }
        },
        "required": [
          "amount"
        ],
        "examples": [
          {
            "amount": 3.5
          }
        ],
        "minProperties": 1,
        "description": "A component with an example"
      },
      "Body": {
        "type": "object",
        "properties": {
          "ratio": {
            "type": "number",
            "format": "float",
            "exclusiveMinimum": 0,
            "exclusiveMaximum": 1,
            "description": "Both bounds made exclusive"
          },
          "even": {
            "type": "integer",
            "format": "int64",
            "minimum": 1,
            "multipleOf": 2,
            "description": "False flags are dropped, with or without a bound"
          },
          "code": {
            "type": "string",
            "title": "code-title",
            "minLength": 2,
            "maxLength": 8,
            "pattern": "^[A-Z]+$",
            "examples": [
              "ABC"
            ],
            "deprecated": true,
            "description": "A string with an example"
          },
          "tag": {
            "type": "object",
            "properties": {
              "name": {
                "type": "string"
              }
            },
            "required": [
              "name"
            ],
            "examples": [
              {
                "name": "tag"
              }
            ],
            "minProperties": 1,
            "maxProperties": 3,
            "additionalProperties": false,
            "description": "An object with an example"
          },
          "currencies": {
            "type": "array",
            "items": {
              "type": "string"
            },
            "examples": [
              [
                "AUD",
                "USD"
              ]
            ],
            "minItems": 1,
            "maxItems": 5,
            "uniqueItems": true,
            "description": "An array with an example"
          },
          "status": {
            "type": "string",
            "enum": [
              "OPEN",
              "CLOSED"
            ],
            "title": "status-title",
            "examples": [
              "OPEN"
            ],
            "deprecated": false,
            "description": "A literal union with an example"
          },
          "note": {
            "type": [
              "string",
              "null"
            ],
            "title": "note-title",
            "deprecated": true,
            "description": "A nullable union with schemaprops"
          },
          "namedPrice": {
            "allOf": [
              {
                "type": "object",
                "properties": {
                  "amount": {
                    "type": "number",
                    "format": "double"
                  }
                },
                "required": [
                  "amount"
                ]
              },
              {
                "type": "object",
                "properties": {
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ]
              }
            ],
            "title": "named-price",
            "examples": [
              {
                "amount": 3.5,
                "name": "tag"
              }
            ],
            "description": "An intersection with an example"
          },
          "previous": {
            "anyOf": [
              {
                "$ref": "#/components/schemas/Price"
              },
              {
                "type": "null"
              }
            ],
            "description": "A nullable reference to a component with an example"
          }
        },
        "required": [
          "ratio",
          "even",
          "code",
          "tag",
          "currencies",
          "status",
          "note",
          "namedPrice",
          "previous"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator openapi3-1/contract-with-unions.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "contract",
    "version": "0.0.0"
  },
  "paths": {
    "/users": {
      "get": {
        "operationId": "Unions",
        "responses": {
          "200": {
            "description": "200 response",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Body"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "Cat": {
        "type": "object",
        "properties": {
          "kind": {
            "type": "string",
            "enum": [
              "cat"
            ]
          },
          "meows": {
            "type": "boolean"
          }
        },
        "required": [
          "kind",
          "meows"
        ]
      },
      "Dog": {
        "type": "object",
        "properties": {
          "kind": {
            "type": "string",
            "enum": [
              "dog"
            ]
          },
          "barks": {
            "type": "boolean"
          }
        },
        "required": [
          "kind",
          "barks"
        ]
      },
      "Bird": {
        "type": "object",
        "properties": {
          "wings": {
            "type": "integer",
            "format": "int32"
          }
        },
        "required": [
          "wings"
        ]
      },
      "MaybePet": {
        "anyOf": [
          {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Cat"
              },
              {
                "$ref": "#/components/schemas/Dog"
              }
            ],
            "discriminator": {
              "propertyName": "kind",
              "mapping": {
                "cat": "#/components/schemas/Cat",
                "dog": "#/components/schemas/Dog"
              }
            }
          },
          {
            "type": "null"
          }
        ]
      },
      "Pet": {
        "oneOf": [
          {
            "$ref": "#/components/schemas/Cat"
          },
          {
            "$ref": "#/components/schemas/Dog"
          }
        ],
        "discriminator": {
          "propertyName": "kind",
          "mapping": {
            "cat": "#/components/schemas/Cat",
            "dog": "#/components/schemas/Dog"
          }
        }
      },
      "Choices": {
        "type": "object",
        "properties": {
          "colour": {
            "type": "string",
            "enum": [
              "red",
              "green"
            ]
          },
          "pet": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Cat"
              },
              {
                "$ref": "#/components/schemas/Dog"
              }
            ],
            "discriminator": {
              "propertyName": "kind",
              "mapping": {
                "cat": "#/components/schemas/Cat",
                "dog": "#/components/schemas/Dog"
              }
            }
          }
        },
        "required": [
          "colour",
          "pet"
        ]
      },
      "Body": {
        "type": "object",
        "properties": {
          "literals": {
            "type": "string",
            "enum": [
              "a",
              "b"
            ]
          },
          "nullableLiterals": {
            "type": [
              "string",
              "null"
            ],
            "enum": [
              "a",
              "b",
              null
            ]
          },
          "mixed": {
            "oneOf": [
              {
                "type": "string"
              },
              {
                "type": "integer",
                "format": "int32"
              },
              {
                "type": "boolean"
              }
            ]
          },
          "nullableMixed": {
            "oneOf": [
              {
                "type": "string"
              },
              {
                "type": "integer",
                "format": "int32"
              },
              {
                "type": "null"
              }
            ]
          },
          "discriminated": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Cat"
              },
              {
                "$ref": "#/components/schemas/Dog"
              }
            ],
            "discriminator": {
              "propertyName": "kind",
              "mapping": {
                "cat": "#/components/schemas/Cat",
                "dog": "#/components/schemas/Dog"
              }
            }
          },
          "nullableDiscriminated": {
            "anyOf": [
              {
                "oneOf": [
                  {
                    "$ref": "#/components/schemas/Cat"
                  },
                  {
                    "$ref": "#/components/schemas/Dog"
                  }
                ],
                "discriminator": {
                  "propertyName": "kind",
                  "mapping": {
                    "cat": "#/components/schemas/Cat",
                    "dog": "#/components/schemas/Dog"
                  }
                }
              },
              {
                "type": "null"
              }
            ]
          },
          "inlineDiscriminated": {
            "oneOf": [
              {
                "type": "object",
                "properties": {
                  "kind": {
                    "type": "string",
                    "enum": [
                      "cat"
                    ]
                  }
                },
                "required": [
                  "kind"
                ]
              },
              {
                "type": "object",
                "properties": {
                  "kind": {
                    "type": "string",
                    "enum": [
                      "dog"
                    ]
                  }
                },
                "required": [
                  "kind"
                ]
              }
            ],
            "discriminator": {
              "propertyName": "kind"
            }
          },
          "undiscriminated": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Cat"
              },
              {
                "$ref": "#/components/schemas/Bird"
              }
            ]
          },
          "nullableUndiscriminated": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Cat"
              },
              {
                "$ref": "#/components/schemas/Bird"
              },
              {
                "type": "null"
              }
            ]
          },
          "undiscriminatedWithNullableMember": {
            "oneOf": [
              {
                "$ref": "#/components/schemas/Bird"
              },
              {
                "$ref": "#/components/schemas/MaybePet"
              }
            ]
          },
          "pet": {
            "$ref": "#/components/schemas/Pet"
          },
          "maybePet": {
            "$ref": "#/components/schemas/MaybePet"
          },
          "catOrNull": {
            "anyOf": [
              {
                "$ref": "#/components/schemas/Cat"
              },
              {
                "type": "null"
              }
            ]
          },
          "inlineLiteralUnionOrNull": {
            "type": [
              "string",
              "null"
            ],
            "enum": [
              "red",
              "green",
              null
            ]
          },
          "inlineDiscriminatedUnionOrNull": {
            "anyOf": [
              {
                "oneOf": [
                  {
                    "$ref": "#/components/schemas/Cat"
                  },
                  {
                    "$ref": "#/components/schemas/Dog"
                  }
                ],
                "discriminator": {
                  "propertyName": "kind",
                  "mapping": {
                    "cat": "#/components/schemas/Cat",
                    "dog": "#/components/schemas/Dog"
                  }
                }
              },
              {
                "type": "null"
              }
            ]
          }
        },
        "required": [
          "literals",
          "nullableLiterals",
          "mixed",
          "nullableMixed",
          "discriminated",
          "nullableDiscriminated",
          "inlineDiscriminated",
          "undiscriminated",
          "nullableUndiscriminated",
          "undiscriminatedWithNullableMember",
          "pet",
          "maybePet",
          "catOrNull",
          "inlineLiteralUnionOrNull",
          "inlineDiscriminatedUnionOrNull"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3.1 generator versioned-contract.ts matches the snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "versioned-contract",
    "version": "0.1.0"
  },
  "paths": {}
}"
`;
